# ImageStackToolbox

./: .gitmodules  CMakeLists.txt  LICENSE  README.MD
.github/workflows/: cmake.yml
examples/: BatchFocusStackExample.cpp  BatchPetteriAimonenFocusStackExample.cpp  CMakeLists.txt  FileUtils.hpp  FocusStackExample.cpp
inc/detectorextractor/: CudaAKAZEDetectorExtractor.h  DetectorExtractorBase.h  FastAKAZEDetectorExtractor.h  OpenCVAKAZEDetectorExtractor.h  OpenCVSIFTDetectorExtractor.h
inc/exceptions/: InsufficientDataException.hpp
inc/image/: Image.h
inc/imagealign/: CPUImageAligner.h  GPUImageAligner.h  ImageAligner.h  ImageAlignerBase.h
inc/imagestack/: FocusImageStacker.h  GenericImageStackerBase.h  ImageStackerBase.h  MeanImageStacker.h  PetteriAimonenFocusImageStacker.h
inc/matcher/: CudaAKAZEMatcher.h  Matcher.h  OpenCVBFMatcher.h  OpenCVCudaBFMatcher.h  OpenCVCudaMatcher.h  OpenCVFlannMatcher.h  OpenCVMatcher.h
inc/util/: ImageUtils.h  MatchUtils.h  Timer.h  Utils.h
src/detectorextractor/: CudaAKAZEDetectorExtractor.cpp  DetectorExtractorBase.cpp  FastAKAZEDetectorExtractor.cpp  OpenCVAKAZEDetectorExtractor.cpp  OpenCVSIFTDetectorExtractor.cpp
src/image/: Image.cpp
src/imagealign/: CPUImageAligner.cpp  GPUImageAligner.cpp  ImageAligner.cpp  ImageAlignerBase.cpp
src/imagestack/: FocusImageStacker.cpp  GenericImageStackerBase.cpp  ImageStackerBase.cpp  MeanImageStacker.cpp  PetteriAimonenFocusImageStacker.cpp
src/matcher/: CudaAKAZEMatcher.cpp  Matcher.cpp  OpenCVBFMatcher.cpp  OpenCVCudaBFMatcher.cpp  OpenCVCudaMatcher.cpp  OpenCVFlannMatcher.cpp  OpenCVMatcher.cpp
src/templateinstantiations/: ImageAlignerTI.cpp  OpenCVCudaMatcherTI.cpp  OpenCVMatcherTI.cpp
src/util/: ImageUtils.cpp  MatchUtils.cpp  Timer.cpp  Utils.cpp
test/: CMakeLists.txt  unitTests.cpp
